Diploma-Project-2023/diploma-project-back-end/k8s/gateway/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: gateway
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8100"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - name: gateway
          image: ghcr.io/nullchefo/diploma-project-gateway-service:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              # actuator private network only
            - containerPort: 8100

          resources:
            requests:
              memory: "256Mi"
            limits:
              # Gateway needs joyce
              memory: "1024Mi"
