Diploma-Project-2023/diploma-project-back-end/k8s/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    #    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "5600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "5600"
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: public
  rules:
    - host: backend.nullchefo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8000
